T keng/fix section spacing (#513)
* change div wrapping

* fix spacing on sidebar and centerview

--- a/src/client/src/appStyles.module.css
+++ b/src/client/src/appStyles.module.css
@@ -13,7 +13,7 @@
   height: calc(100vh - 122px);
   margin-top: 51px;
   margin-bottom: 71px;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .centerViewMaxHeight {
